@@ -6,10 +6,10 @@ import org.springframework.validation.ObjectError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
-import ru.just.dtolib.error.ApiError;
 import ru.just.courses.repository.exceptions.EntityNotFoundException;
+import ru.just.dtolib.error.ApiError;
 
-import java.time.OffsetDateTime;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.NoSuchElementException;
@@ -18,12 +18,12 @@ import java.util.NoSuchElementException;
 public class GlobalExceptionHandler {
     @ExceptionHandler(value = {EntityNotFoundException.class})
     public ResponseEntity<ApiError> entityNotFoundExceptionHandler(EntityNotFoundException ex) {
-        return new ResponseEntity<>(new ApiError(OffsetDateTime.now(), ex.getMessage()), HttpStatus.NOT_FOUND);
+        return new ResponseEntity<>(new ApiError(LocalDateTime.now(), ex.getMessage()), HttpStatus.NOT_FOUND);
     }
 
     @ExceptionHandler(value = {NoSuchElementException.class})
     public ResponseEntity<ApiError> entityNotFoundExceptionHandler(NoSuchElementException ex) {
-        return new ResponseEntity<>(new ApiError(OffsetDateTime.now(), ex.getMessage()), HttpStatus.NOT_FOUND);
+        return new ResponseEntity<>(new ApiError(LocalDateTime.now(), ex.getMessage()), HttpStatus.NOT_FOUND);
     }
 
     @ExceptionHandler
@@ -34,8 +34,8 @@ public class GlobalExceptionHandler {
             for (ObjectError error : ex.getBindingResult().getAllErrors()) {
                 errorDetails.add(error.getDefaultMessage());
             }
-            if (errorDetails.size() > 0) errorMsg = errorDetails.get(0);
+            if (!errorDetails.isEmpty()) errorMsg = errorDetails.getFirst();
         }
-        return new ResponseEntity<>(new ApiError(OffsetDateTime.now(), errorMsg), HttpStatus.BAD_REQUEST);
+        return new ResponseEntity<>(new ApiError(LocalDateTime.now(), errorMsg), HttpStatus.BAD_REQUEST);
     }
 }
